--- a/ansible/roles/vault/handlers/main.yml
+++ b/ansible/roles/vault/handlers/main.yml
@@ -10,3 +10,7 @@
     state: restarted
     enabled: yes
   when: ansible_service_mgr is defined and ansible_service_mgr == "systemd"  # find a better testing strategy for this in dockers?
+
+- name: nginx reload
+#  service: name=nginx state=reloaded
+  command: echo hullo
