--- a/ansible/roles/vault/tasks/main.yml
+++ b/ansible/roles/vault/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 
-- include: ../../testinfra.yml
+- import_tasks: ../../testinfra.yml
 
 
 - name: Ensure vault group
@@ -18,13 +18,14 @@
     state: present
 
 
-- include: install.yml
+- import_tasks: install.yml
 
-- name: Gather about currently running instance
-  ec2_facts:
-  when: packer_builder_type is not defined or packer_builder_type == 'amazon-ebs'
+# DEPRECATED EH???
+#- name: Gather about currently running instance
+#  ec2_facts:
+#  when: packer_builder_type is not defined or packer_builder_type == 'amazon-ebs'
 
-- include: nginx.yml
+- import_tasks: nginx.yml
 
 - name: Ensure vault config directory
   file:
