--- a/ansible/roles/vault/tasks/main.yml
+++ b/ansible/roles/vault/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
 
-- import_tasks: ../../testinfra.yml
+- name: Import testinfra tasks
+  import_tasks: ../../testinfra.yml
 
 
 - name: Ensure vault group
@@ -18,14 +19,16 @@
     state: present
 
 
-- import_tasks: install.yml
+- name: Import install vault tasks
+  import_tasks: install.yml
 
 # DEPRECATED EH???
 #- name: Gather about currently running instance
 #  ec2_facts:
 #  when: packer_builder_type is not defined or packer_builder_type == 'amazon-ebs'
 
-- import_tasks: nginx.yml
+- name: Import nginx tasks
+  import_tasks: nginx.yml
 
 - name: Ensure vault config directory
   file:
