--- a/packer/vault-consul-ami/vault-consul.yaml
+++ b/packer/vault-consul-ami/vault-consul.yaml
@@ -48,6 +48,8 @@ provisioners:
 #      - sudo pip install junit_xml
 #      - mkdir -p ~/.ansible/plugins/callback/
 #      - mkdir /tmp/artifacts/
+    only:
+      - vault-ubuntu-16.04-ami
   - type: file
     source: '{{user `ca_public_key_path`}}'
     destination: /tmp/ca.crt.pem
@@ -60,7 +62,14 @@ provisioners:
   - type: ansible-local
     playbook_file: '{{ template_dir }}/../../ansible/local.yml'
     playbook_dir: '{{ template_dir }}/../../ansible/'
-    role_paths: '{{ template_dir }}/../../ansible/roles'
+    role_paths:
+      - '{{ template_dir }}/../../ansible/roles/vault/'
+      - '{{ template_dir }}/../../ansible/server_cm_roles/common/'
+      - '{{ template_dir }}/../../ansible/server_cm_roles/nginx/'
+      - '{{ template_dir }}/../../ansible/server_cm_roles/zabbix-agent/'
+      - '{{ template_dir }}/../../ansible/server_cm_roles/ldap-client/'
+      - '{{ template_dir }}/../../ansible/server_cm_roles/security/'
+#    command: 'ANSIBLE_FORCE_COLOR=1 PYTHONUNBUFFERED=1 ansible-playbook -vvv'
 #    command: ANSIBLE_FORCE_COLOR=1 PYTHONUNBUFFERED=1 WPE_DEPLOY_LOG_DIR=/tmp/artifacts
 #        ANSIBLE_CALLBACK_PLUGINS=/ansible-callbacks ansible-playbook -vvv --become
 post-processors:
