--- a/ansible/server_cm_roles/ldap-client/handlers/main.yml
+++ b/ansible/server_cm_roles/ldap-client/handlers/main.yml
@@ -2,7 +2,7 @@
 
 - name: restart sssd
   service: name=sssd state=restarted
-  when: packer_builder_type is defined and packer_builder_type != "docker"tom
+  when: packer_builder_type is defined and packer_builder_type != "docker"
 
 - name: aa-enforce sssd
   command: aa-enforce /usr/sbin/sssd
