--- a/ansible/local.yml
+++ b/ansible/local.yml
@@ -51,7 +51,7 @@
     - { role: ami-cleanup, tags: role_ami_cleanup }
     - { role: common-packages, tags: role_common_packages }
     - { role: td-agent, tags: role_td_agent }
-    - { role: ufw-firewall, tags: role_ufw_firewall, when: packer_builder_type is defined and packer_builder_type != 'docker' }
+    - { role: ufw-firewall, tags: role_ufw_firewall } #, when: packer_builder_type is defined and packer_builder_type != 'docker' }
     - { role: nginx, tags: role_nginx }
     - { role: vault, tags: role_vault }
     - { role: security, tags: role_security }
