Run as many tasks as possible in ufw role + docker builds

--- a/packer/vault-consul-ami/vault-consul.yaml
+++ b/packer/vault-consul-ami/vault-consul.yaml
@@ -34,16 +34,8 @@ builders:
     pull: false
     commit: true
     changes:
-      - ENV WPE_DEPLOY_LOG_DIR /artifacts
-      - ENV JUNIT_OUTPUT_DIR /test-results
-      - VOLUME artifacts/test-results /test-results
       - CMD /usr/bin/supervisord
 provisioners:
-  - type: file
-    source: '{{ template_dir }}/../../tests/ansible/mock_ufw.sh'
-    destination: /usr/sbin/ufw
-    only:
-      - vault-ubuntu-16.04-docker
   - type: shell
     inline:
       - sudo apt update
@@ -68,16 +60,11 @@ provisioners:
     playbook_dir: '{{ template_dir }}/../../ansible/'
     role_paths:
       - '{{ template_dir }}/../../ansible/roles/'
-#      - '{{ template_dir }}/../../ansible/roles/ami-cleanup/'
-#      - '{{ template_dir }}/../../ansible/roles/common-packages/'
-#      - '{{ template_dir }}/../../ansible/roles/nginx/'
-#      - '{{ template_dir }}/../../ansible/roles/zabbix-agent/'
-#      - '{{ template_dir }}/../../ansible/roles/ldap-client/'
-#      - '{{ template_dir }}/../../ansible/roles/vault/'
-#      - '{{ template_dir }}/../../ansible/roles/security/'
-    command: 'ANSIBLE_FORCE_COLOR=1 PYTHONUNBUFFERED=1 sudo ansible-playbook -vvv'
-#    command: ANSIBLE_FORCE_COLOR=1 PYTHONUNBUFFERED=1 WPE_DEPLOY_LOG_DIR=/tmp/artifacts
-#        ANSIBLE_CALLBACK_PLUGINS=/ansible-callbacks ansible-playbook -vvv --become
+    # TODO: Maybe look at capturing ansible results here via our callback plugins along with something like:
+    # "... WPE_DEPLOY_LOG_DIR=/tmp/artifacts ANSIBLE_CALLBACK_PLUGINS=/ansible-callbacks .."
+    command: 'ANSIBLE_FORCE_COLOR=1 PYTHONUNBUFFERED=1 ANSIBLE_DEBUG=true sudo ansible-playbook'
+    extra_arguments:
+      - '-vvvv'
 post-processors:
   - type: docker-tag
     repository: wpengine/vault-packer
