--- a/ansible/local.yml
+++ b/ansible/local.yml
@@ -8,7 +8,7 @@
   become_user: root
   become: yes
   become_method: sudo
-
+#  strategy: debug  # just something to think about...
   vars:
     - cache_valid_time: 600
     - nginx_wildcard_certificates: []
