--- a/ansible/roles/ufw-firewall/tasks/main.yml
+++ b/ansible/roles/ufw-firewall/tasks/main.yml
@@ -3,11 +3,21 @@
 - name: Ensure ufw and requisite packages are installed
   apt:
     name: "{{ item }}"
-    force: yes
     state: present
+    update_cache: yes
+    cache_valid_time: "{{ cache_valid_time }}"
   with_items:
     - module-init-tools
     - ufw
+
+- name: Mock UFW in docker testing land as docker likes to manage iptables itself thank you very much
+  copy:
+    src: usr/sbin/mock_ufw.sh
+    dest: /usr/sbin/ufw
+    owner: root
+    group: root
+    mode: 0755
+  when: packer_builder_type is defined and packer_builder_type == 'docker'
 
 - name: /etc/modprobe.d
   file:
@@ -32,7 +42,6 @@
   tags:
     - modprobe
     - conntrack
-
 
 - name: Default firewall policy allow
   ufw:
