You are asking a question but aint no one home

--- a/packer/vault-consul-ami/vault-consul.yaml
+++ b/packer/vault-consul-ami/vault-consul.yaml
@@ -39,7 +39,7 @@ provisioners:
   - type: shell
     inline:
       - sudo apt update
-      - sudo apt dist-upgrade
+      - DEBIAN_FRONTEND=noninteractive sudo apt -y dist-upgrade
   - type: shell
     inline:
       - sudo apt install -y python-pip
