--- a/ansible/roles/nginx/handlers/main.yml
+++ b/ansible/roles/nginx/handlers/main.yml
@@ -2,10 +2,12 @@
 
 - name: nginx provisioning restart
   service: name=nginx state=restarted
-  when: packer_builder_type is defined and packer_builder_type != "docker" and stat_cm_initial_flag.stat.exists
+  when: packer_builder_type is defined and packer_builder_type != "docker"
 
 - name: nginx reload
-  service: name=nginx state=reloaded
+  service:
+    name: nginx
+    state: reloaded
   when: packer_builder_type is defined and packer_builder_type != "docker"
 
 - name: nginx upgrade configtest
