--- a/ansible/roles/nginx/handlers/main.yml
+++ b/ansible/roles/nginx/handlers/main.yml
@@ -1,29 +1,19 @@
 ---
 
 - name: nginx provisioning restart
-  service: name=nginx state=restarted
-  when: packer_builder_type is defined and packer_builder_type != "docker"
+  service:
+    name: nginx
+    state: restarted
+#  when: packer_builder_type is defined and packer_builder_type != "docker"
 
 - name: nginx reload
   service:
     name: nginx
     state: reloaded
-  when: packer_builder_type is defined and packer_builder_type != "docker"
-
-- name: nginx upgrade configtest
-  command: nginx -t
-  ignore_errors: yes
-  register: nginx_config_test
-  changed_when: nginx_config_test.rc == 0
-  notify: nginx upgrade restart
-  when: nginx_version is defined
-
-- name: nginx upgrade restart
-  service: name=nginx state=restarted
-  when: nginx_version is defined
+#  when: packer_builder_type is defined and packer_builder_type != "docker"
 
 - name: nginx start
   service:
     name: nginx
     state: started
-  when: packer_builder_type is defined and packer_builder_type != "docker"
+#  when: packer_builder_type is defined and packer_builder_type != "docker"
