--- a/ansible/roles/vault/templates/etc/nginx/sites-available/healthcheck.conf
+++ b/ansible/roles/vault/templates/etc/nginx/sites-available/healthcheck.conf
@@ -20,7 +20,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $http_host;
         proxy_pass https://127.0.0.1:8200/v1/sys/health;
-        proxy_ssl_certificate      /etc/vault.d/ssl/bundle.crt;
-        proxy_ssl_certificate_key  /etc/vault.d/ssl/vault.key;
+        proxy_ssl_certificate		{{ vault_ssl_crt }};
+        proxy_ssl_certificate_key	{{ vault_ssl_key }};
     }
 }
