--- a/ansible/roles/vault/templates/etc/nginx/sites-available/vault.conf
+++ b/ansible/roles/vault/templates/etc/nginx/sites-available/vault.conf
@@ -36,8 +36,8 @@ server {
         # use our rate limit zone defined above,
         limit_req zone=vault burst=20 nodelay;
         proxy_pass https://127.0.0.1:8200;
-        proxy_ssl_certificate      /etc/vault.d/ssl/bundle.crt;
-        proxy_ssl_certificate_key  /etc/vault.d/ssl/vault.key;
+        proxy_ssl_certificate		{{ vault_ssl_crt }};
+        proxy_ssl_certificate_key	{{ vault_ssl_key }};
         proxy_set_header Host $host;
         expires -1;
     }
