--- a/ansible/roles/vault/templates/etc/nginx/sites-available/healthcheck.conf
+++ b/ansible/roles/vault/templates/etc/nginx/sites-available/healthcheck.conf
@@ -11,8 +11,8 @@ server {
     ssl_protocols {{ nginx_ssl_protocols }};
     ssl_prefer_server_ciphers on;
     ssl_ciphers {{ nginx_ssl_ciphers }};
-    ssl_certificate     {{ vault_ssl_crt }};
-    ssl_certificate_key {{ vault_ssl_key }};
+    ssl_certificate     {{ vault_ssl_crt_path }};
+    ssl_certificate_key {{ vault_ssl_key_path }};
     keepalive_timeout           70;
 
     location /healthcheck {
@@ -20,7 +20,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $http_host;
         proxy_pass https://127.0.0.1:8200/v1/sys/health;
-        proxy_ssl_certificate		{{ vault_ssl_crt }};
-        proxy_ssl_certificate_key	{{ vault_ssl_key }};
+        proxy_ssl_certificate		{{ vault_ssl_crt_path }};
+        proxy_ssl_certificate_key	{{ vault_ssl_key_path }};
     }
 }
