--- a/ansible/roles/ldap-client/tasks/main.yml
+++ b/ansible/roles/ldap-client/tasks/main.yml
@@ -88,7 +88,7 @@
     - group
     - sudoers
 
-- include: user-mapping.yml
+- import_tasks: user-mapping.yml
   when: is_farm
   tags:
     - ldap_user_mapping
