--- a/ansible/roles/vault/templates/etc/nginx/sites-available/vault.conf
+++ b/ansible/roles/vault/templates/etc/nginx/sites-available/vault.conf
@@ -19,8 +19,8 @@ server {
     ssl_protocols {{ nginx_ssl_protocols }};
     ssl_prefer_server_ciphers on;
     ssl_ciphers {{ nginx_ssl_ciphers }};
-    ssl_certificate     {{ vault_ssl_crt }};
-    ssl_certificate_key {{ vault_ssl_key }};
+    ssl_certificate     {{ vault_ssl_crt_path }};
+    ssl_certificate_key {{ vault_ssl_key_path }};
 
     ssl_session_cache    shared:SSL:10m;
     ssl_session_timeout  10m;
@@ -36,8 +36,8 @@ server {
         # use our rate limit zone defined above,
         limit_req zone=vault burst=20 nodelay;
         proxy_pass https://127.0.0.1:8200;
-        proxy_ssl_certificate		{{ vault_ssl_crt }};
-        proxy_ssl_certificate_key	{{ vault_ssl_key }};
+        proxy_ssl_certificate		{{ vault_ssl_crt_path }};
+        proxy_ssl_certificate_key	{{ vault_ssl_key_path }};
         proxy_set_header Host $host;
         expires -1;
     }
