--- a/ansible/vault.yml
+++ b/ansible/vault.yml
@@ -37,13 +37,14 @@
 #    - wpengine_domain: wpenginedev.com
     - register_with_zabbix: false
 
+
   pre_tasks:
-#    - include: shared-load-vars.yml
+#    - import_tasks: shared-load-vars.yml
 #      check_mode: no
 #      tags: always
 
       # for tasks ineligible for tags:always
-#    - include: shared-pre-tasks.yml
+#    - import_tasks: shared-pre-tasks.yml
 
   # CAUTION: Applying a when to a role also applies it to all the role's dependencies and handlers. A skipped role may
   # prevent the handlers or additional dependencies on that role from being executed later
@@ -52,10 +53,9 @@
     - { role: common-packages, tags: role_common_packages }
     - { role: td-agent, tags: role_td_agent }
     - { role: ufw-firewall, tags: role_ufw_firewall } #, when: packer_builder_type is defined and packer_builder_type != 'docker' }
-    - { role: nginx, tags: role_nginx }
     - { role: vault, tags: role_vault }
     - { role: security, tags: role_security }
     - { role: zabbix-agent, tags: role_zabbix_agent, when: register_with_zabbix }
 
 #  post_tasks:
-#    - include: shared-post-tasks.yml
+#    - import_tasks: shared-post-tasks.yml
