--- a/packer/vault-consul-ami/vault-consul.yaml
+++ b/packer/vault-consul-ami/vault-consul.yaml
@@ -53,7 +53,7 @@ provisioners:
     source: '{{user `tls_private_key_path`}}'
     destination: /tmp/vault.key.pem
   - type: ansible-local
-    playbook_file: '{{ template_dir }}/../../ansible/local.yml'
+    playbook_file: '{{ template_dir }}/../../ansible/vault.yml'
     playbook_dir: '{{ template_dir }}/../../ansible/'
     role_paths:
       - '{{ template_dir }}/../../ansible/roles/'
