--- a/ansible/roles/vault/meta/main.yml
+++ b/ansible/roles/vault/meta/main.yml
@@ -15,7 +15,7 @@ dependencies:
         state: present
         user: vault
         configuration: |
-         autostart=true
+         autostart=false
          autorestart=true
          startretries=1
          startsecs=1
@@ -24,12 +24,26 @@ dependencies:
          stdout_logfile=/var/log/vault.log
          killasgroup=true
          stopasgroup=true
-      - name: 'consul'
-        command: /usr/local/bin/consul agent -config-file=/etc/consul.d/consul.hcl
+      - name: 'consul-agent'
+        command: /usr/local/bin/consul agent -config-file=/etc/consul.d/agent.hcl
         state: present
         user: consul
         configuration: |
-         autostart=true
+         autostart=false
+         autorestart=true
+         startretries=1
+         startsecs=1
+         redirect_stderr=true
+         stderr_logfile=/var/log/consul.error.log
+         stdout_logfile=/var/log/vault.log
+         killasgroup=true
+         stopasgroup=true
+      - name: 'consul-server'
+        command: /usr/local/bin/consul -server -bootstrap-expect {{ consul_cluster_size }} -config-file=/etc/consul.d/server.hcl
+        state: present
+        user: consul
+        configuration: |
+         autostart=false
          autorestart=true
          startretries=1
          startsecs=1
