Seperate server / agent consul configs

--- a/ansible/vault.yml
+++ b/ansible/vault.yml
@@ -31,7 +31,7 @@
     - cluster:
           datacenter: "{{ packer_builder_type }}"
 
-    - tmp_certs_path: "{{ playbook_dir }}/../../../../../artifacts"
+    - tmp_certs_path: "/tmp"
     - vault_ssl_cert: "{{ lookup('file', '{{ tmp_certs_path }}/vault.crt.pem') }}"
     - vault_ssl_ca_cert: "{{ lookup('file', '{{ tmp_certs_path }}/vault.ca.crt.pem') }}"
     - vault_ssl_key: "{{ lookup('file', '{{ tmp_certs_path }}/vault.key.pem') }}"
