Get vault running in packer-built test image

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 # we store our cannonical packer templates in yaml only
 packer/**/*.json
 ansible/**/*.retry
+ansible/**/vault*.zip
+ansible/**/consul*.zip
