--- a/ansible/roles/td-agent/templates/etc/td-agent/config.d/syslog.conf
+++ b/ansible/roles/td-agent/templates/etc/td-agent/config.d/syslog.conf
@@ -10,7 +10,7 @@
   <record>
     facility ${tag_parts[-2]}
     priority ${tag_parts[-1]}
-    datacenter_group {{ my.cluster.datacenter }}
+    datacenter_group {{ datacenter }}
   </record>
 </filter>
 
