--- a/ansible/roles/vault/handlers/main.yml
+++ b/ansible/roles/vault/handlers/main.yml
@@ -1,9 +1,10 @@
 ---
 
 - name: Vault Restart
-  supervisorctl:
-    name: vault
-    state: restarted
+  command: echo hullo  # we need a way to have vault start up without needing consul to bootstrap first?
+#  supervisorctl:
+#    name: vault
+#    state: restarted
 
 - name: Update CA certificates
   command: update-ca-certificates
